# mdahole2

./: .buildinfo  .codecov.yml  .gitattributes  .gitignore  .lgtm.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api.html  build.sh  genindex.html  getting_started.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yaml  references.html  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: api.doctree  environment.pickle  getting_started.doctree  index.doctree  references.doctree  usage.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  docs.yaml  gh-ci-dev.yaml  gh-ci.yaml
_modules/: index.html
_modules/mdahole2/analysis/: hole.html  utils.html
_modules/mdakithole2/analysis/: hole.html  utils.html
_sources/: api.rst.txt  getting_started.rst.txt  index.rst.txt
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  references.bib  references.rst  usage.rst
mdahole2/: __init__.py  _version.py
mdahole2/analysis/: __init__.py  hole.py  templates.py  utils.py
mdahole2/data/: files.py
mdahole2/tests/: conftest.py  datafiles.py  test_duecredit.py  test_mdakithole2.py  utils.py
mdakithole2/: __init__.py  _version.py  mdakithole2.py
mdakithole2/analysis/: __init__.py  hole.py  holeanalysis.py  templates.py  utils.py
mdakithole2/tests/: conftest.py  test_mdakithole2.py
mdakithole2/tests/analysis/: test_holeanalysis.py
